name:                 mmark
version:              0.0.7.1
cabal-version:        1.18
tested-with:          GHC==8.2.2, GHC==8.4.4, GHC==8.6.5
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mmark-md/mmark
bug-reports:          https://github.com/mmark-md/mmark/issues
category:             Text
synopsis:             Strict markdown processor for writers
build-type:           Simple
description:          Strict markdown processor for writers.
extra-doc-files:      CHANGELOG.md
                    , README.md
data-files:           data/*.md
                    , data/*.html

source-repository head
  type:               git
  location:           https://github.com/mmark-md/mmark.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      aeson            >= 0.11 && < 1.5
                    , base             >= 4.10 && < 5.0
                    , case-insensitive >= 1.2  && < 1.3
                    , containers       >= 0.5  && < 0.7
                    , deepseq          >= 1.3  && < 1.5
                    , dlist            >= 0.8  && < 0.9
                    , email-validate   >= 2.2  && < 2.4
                    , foldl            >= 1.2  && < 1.5
                    , hashable         >= 1.0.1.1 && < 1.4
                    , html-entity-map  >= 0.1  && < 0.2
                    , lucid            >= 2.6  && < 3.0
                    , megaparsec       >= 7.0  && < 8.0
                    , microlens        >= 0.4  && < 0.5
                    , microlens-th     >= 0.4  && < 0.5
                    , modern-uri       >= 0.3  && < 0.4
                    , mtl              >= 2.0  && < 3.0
                    , parser-combinators >= 0.4 && < 2.0
                    , text             >= 0.2  && < 1.3
                    , text-metrics     >= 0.3  && < 0.4
                    , unordered-containers >= 0.2.5 && < 0.3
  if !impl(ghcjs)
    build-depends:    yaml             >= 0.8.10 && < 0.12
  exposed-modules:    Text.MMark
                    , Text.MMark.Extension
  other-modules:      Text.MMark.Parser
                    , Text.MMark.Parser.Internal
                    , Text.MMark.Parser.Internal.Type
                    , Text.MMark.Render
                    , Text.MMark.Trans
                    , Text.MMark.Type
                    , Text.MMark.Util
  if flag(dev)
    ghc-options:      -O0 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if flag(dev)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
  if impl(ghcjs)
    ghcjs-options:    +RTS -K1G -RTS -Wall

  default-language:   Haskell2010

test-suite tests
  main-is:            Spec.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      QuickCheck       >= 2.4  && < 3.0
                    , aeson            >= 0.11 && < 1.5
                    , base             >= 4.10 && < 5.0
                    , foldl            >= 1.2  && < 1.5
                    , hspec            >= 2.0  && < 3.0
                    , hspec-megaparsec >= 2.0  && < 3.0
                    , lucid            >= 2.6  && < 3.0
                    , megaparsec       >= 7.0  && < 8.0
                    , mmark
                    , modern-uri       >= 0.3  && < 0.4
                    , text             >= 0.2  && < 1.3
  other-modules:      Text.MMarkSpec
                    , Text.MMark.ExtensionSpec
                    , Text.MMark.TestUtils
  if flag(dev)
    ghc-options:      -O0 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if impl(ghcjs)
    ghcjs-options:    -O0 +RTS -K1G -M5G -RTS -Wall -Wwarn=missing-home-modules
  default-language:   Haskell2010

benchmark bench-speed
  main-is:            Main.hs
  hs-source-dirs:     bench/speed
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.10 && < 5.0
                    , criterion        >= 0.6.2.1 && < 1.6
                    , mmark
                    , text             >= 0.2 && < 1.3
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if impl(ghcjs)
    ghcjs-options:    -O0 +RTS -K1G -M6G -RTS -Wall -Wwarn=missing-home-modules
  default-language:   Haskell2010

benchmark bench-memory
  main-is:            Main.hs
  hs-source-dirs:     bench/memory
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.10 && < 5.0
                    , mmark
                    , text             >= 0.2 && < 1.3
                    , weigh            >= 0.0.4
  if flag(dev)
    ghc-options:      -O2 -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if impl(ghcjs)
    ghcjs-options:    -O0 +RTS -K1G -M6G -RTS -Wall -Wwarn=missing-home-modules
  default-language:   Haskell2010
